# fm21-momba-tutorial

./: .buildinfo  .gitignore  CNAME  Pipfile  README.md  index.html  notes.md  objects.inv  pyproject.toml  searchindex.js  setup.cfg  workspace.code-workspace
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: book.yml
_sources/: getting-started.ipynb  index.md  preparation.md
_sources/tutorial/: best-practices.md  code-style.md  dependency-management.md  getting-started.ipynb  getting-started.md  interactive-game.md  model-analysis.md  model-construction.md  model-the-game.md  model-validation.md  modeling-with-momba.md  preparation.md  reference-game.md  reference-model.md  reproducibility.md  running-example.md  vscode-workspaces.md  vscode.md
book/: _config.yml  _toc.yml  getting-started.md  index.md  preparation.md
book/tutorial/: best-practices.md  code-style.md  dependency-management.md  getting-started.md  model-construction.md  model-creation.md  model-the-game.md  model-validation.md  modeling-with-momba.md  reference-model.md  reproducibility.md  running-example.md  state-space-exploration.md  takeaways.md  vscode-workspaces.md  vscode.md
examples/: parking.py
fmracer/: __main__.py  analysis.py  interactive.py  model.py
genindex/: index.html
getting-started/: index.html
preparation/: index.html
search/: index.html
solutions/: analysis.py  interactive.py  model.py
tracks/: large.txt  simple.txt
tutorial/best-practices/: index.html
tutorial/code-style/: index.html
tutorial/dependency-management/: index.html
tutorial/getting-started/: index.html
tutorial/interactive-game/: index.html
tutorial/model-analysis/: index.html
tutorial/model-construction/: index.html
tutorial/model-creation/: index.html
tutorial/model-the-game/: index.html
tutorial/model-validation/: index.html
(+11 files in other folders)
